# CSC322_Assignment

./: app.py  diabetes_model.pkl  pyproject.toml  train_model.py
attached_assets/: Pasted--Build-an-Intelligent-Diabetes-Prediction-System-Interactive-Arabic-Web-Interface-I-want-you-to-1762271783629_1762271783630.txt
templates/: analysis.html  index.html
